# cmake_example

./: .clang-format  CMakeLists.txt  README.md  setup.py
CMakeProjExample/: CMakeLists.txt  config.cmake
CMakeProjExample/Examples/: CMakeLists.txt
CMakeProjExample/Examples/include/: pet.h
src/: main.cpp
tests/: test.py
